# fastexcel

./: .gitignore  Cargo.toml  INSTALL.md  README.md  jest.config.js  package-lock.json  package.json
src/: lib.rs
src/excel/: mod.rs  row.rs  sheet.rs  sheet_writer.rs  workbook.rs
test/: convert.test.js  lib.test.js
