[package]
name = "fastexcel"
version = "0.1.0"
description = "write large excel file streamly"
authors = ["Aditya Kresna Permana"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.3"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "promise-api", "channel-api"]

[dev-dependencies]
calamine = "0.19.1"
